// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownTitle component arrow direction - bottom 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component arrow direction - left 1`] = `
<span
  className="dropdown_title"
>
  <svg
    className="icon"
    height="20"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 8l-4 4 4 4"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
  TEST
</span>
`;

exports[`DropdownTitle component arrow direction - right 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon"
    height="20"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 8l4 4-4 4"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component arrow direction - unknown 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component className prop 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component default snapshot 1`] = `
<span
  className="dropdown_title"
>
  <svg
    className="icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component disabled prop 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon disabled"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component disabledClassName prop 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon TEST"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;

exports[`DropdownTitle component renders children 1`] = `
<span
  className="dropdown_title"
>
  TEST
  <svg
    className="icon"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 11l-3.009 3.004L9 11"
      fill="none"
      fillRule="evenodd"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1"
    />
  </svg>
</span>
`;
